--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -39,7 +39,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import progressivis as pv\n",
     "from progressivis.io import CSVLoader\n",
     "from progressivis.stats import Histogram2D, Min, Max\n",
     "from progressivis.vis import Heatmap\n",
@@ -49,7 +48,6 @@
     "def filter_(df):\n",
     "    lon = df['pickup_longitude']\n",
     "    lat = df['pickup_latitude']\n",
-    "    #return df[(lon>-74.10)&(lon<-73.7)&(lat>40.60)&(lat<41)]\n",
     "    return df[\n",
     "        (lon>bounds[\"left\"]) &\n",
     "        (lon<bounds[\"right\"]) &\n",
@@ -82,26 +80,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cad1077c-75cf-4f1a-ac2d-feb896390a0e",
-   "metadata": {},
-   "source": [
-    "# Visualize the results\n",
-    "\n",
-    "We use barebone JupyterLab widgets to visualize the results.\n",
-    "We will visualize an image each time the heatmap module is updated."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8032c51f-55f1-4a3d-846d-7f298c6ebbb6",
+   "id": "7dbd2da4-f497-4380-9580-b5a718426eb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8782d93c9e3546be80d5a1227679bd50",
+       "model_id": "9d2e4b5fab9441a5bfa1f87268e60bbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,54 +98,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5562026b8624867a4ba1a63ede5e2a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntText(value=0, disabled=True), Button(description='Stop', style=ButtonStyle())))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "import ipywidgets as ipw\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# Create an ipywidget showing an image. It will be update when\n",
-    "# the heatmap is updated\n",
-    "wg = ipw.Image(value=b'\\x00', width=RESOLUTION, height=RESOLUTION)\n",
-    "# Create a textbox to show the run number (akin to an epoch in ml)\n",
-    "wint = ipw.IntText(value=0, disabled=True)\n",
-    "# Create a button to stop the progressive program\n",
-    "bstop = ipw.Button(description=\"Stop\")\n",
-    "\n",
-    "# Stopping boils down to calling Scheduler.task_stop on the right scheduler\n",
-    "def stop(b):\n",
-    "    csv.scheduler().task_stop()\n",
-    "bstop.on_click(stop)\n",
-    "\n",
-    "display(wg, ipw.HBox([wint, bstop]))\n",
-    "\n",
-    "# Callback to update the image\n",
-    "async def _after_run(m, run_number):\n",
-    "    global wg, wint\n",
-    "    img = m.get_image_bin()  # get the image from the heatmap\n",
-    "    if img is None:\n",
-    "        return\n",
-    "    wg.value = img  # Replace the displayed image with this new one\n",
-    "    wint.value = m.last_update()  # also show the run number\n",
-    "\n",
-    "# Install the callback\n",
-    "heatmap.on_after_run(_after_run)\n",
-    "\n",
-    "# The image is shown below, and will be updated in place"
+    "heatmap.display_notebook()"
    ]
   },
   {
@@ -170,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/miniforge3/envs/pv311/lib/python3.11/site-packages/progressivis/core/scheduler.py:273>>"
+       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
       ]
      },
      "execution_count": 4,
@@ -194,8 +137,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7741831c-7a31-4aee-be94-455bee16805d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<p><b>Scheduler</b> 0x76bdf616e2d0\n",
+       "        <b>running</b>,\n",
+       "        <b>modules:</b> 5,\n",
+       "        <b>run number:</b> 186\n",
+       "</p>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>186</td><td>0</td><tr><td>min_1</td><td>min</td><td>state_blocked</td><td>182</td><td>1</td><tr><td>max_1</td><td>max</td><td>state_blocked</td><td>183</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>184</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>185</td><td>4</td></tbody></table>"
+      ],
+      "text/plain": [
+       "<progressivis.core.scheduler.Scheduler at 0x76bdf616e2d0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv.scheduler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "570f93a3-55f4-403a-9799-f63466777d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv.scheduler().task_stop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3619423-28ce-4961-b458-6cc70ab06d72",
    "metadata": {},
    "outputs": [],
    "source": []
